<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lyricoo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contacts">Add Friends</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="title_activity_inbox">Messages</string>

    <!-- Login resources -->
    <string name="username_field">Email</string>
    <string name="password_field">Password</string>
    <string name="login_label">Login</string>
    <string name="signup_label">Signup</string>
    <string name="rememberme_text">Remember Me</string>
    <!-- /Login -->
    
    <!-- Conversations resources -->
    <string name="conversation_input">Message text</string>
    <string name="conversation_submit">Send</string>
    <!--  /Conversations resources -->
    
    <string name="title_activity_friends">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_settings">Settings</string>
    
    <!--  Action Bar -->
    <string name="action_compose">New Message</string>
    <string name="action_new_friend">New Friend</string>
    <string name="drawer_open">Open navigation menu</string>
    <string name="drawer_close">Close navigation menu</string>
	<string name="search_title">Search</string>
    <string name="categories_activity_title">Categories</string>
    <string name="new_friend_hint">Enter a username</string>
</resources>
