<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
    	android:id="@+id/username_field"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:inputType="textEmailAddress"
    	android:layout_alignParentTop="true"
    	android:hint="@string/username_field">
        
        <requestFocus />
    </EditText>
    	
    	


    <EditText 
        android:id="@+id/password_field"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_field"
        android:hint="@string/password_field"/>
    
    <CheckBox 
        android:id="@+id/rememberme_box"
        android:layout_below="@+id/password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
    <TextView 
        android:layout_alignBaseline="@id/rememberme_box"
        android:layout_toRightOf="@id/rememberme_box"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
        android:text="@string/rememberme_text"/>
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/rememberme_box"
        android:onClick="login"
        android:text="@string/login_label" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/rememberme_box"
        android:onClick="signupClicked"
        android:text="@string/signup_label" />

    <ProgressBar
        android:id="@+id/sign_in_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/password_field"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
